{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 45,
  "lineage": "41d96159-ccdd-c414-6656-e56025adc11c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "clustera",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:subnet/subnet-0a83335ba59b9d872",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "available_ip_address_count": 4089,
            "cidr_block": "10.0.128.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "cluster-subnet-private1-sa-east-1a"
                ]
              }
            ],
            "id": "subnet-0a83335ba59b9d872",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346337500368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "cluster-subnet-private1-sa-east-1a"
            },
            "vpc_id": "vpc-0782d93824dc8c902"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "clusterb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:subnet/subnet-077a4b4b6bc7989cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "10.0.144.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "cluster-subnet-private2-sa-east-1b"
                ]
              }
            ],
            "id": "subnet-077a4b4b6bc7989cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346337500368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "cluster-subnet-private2-sa-east-1b"
            },
            "vpc_id": "vpc-0782d93824dc8c902"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "clusterc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:subnet/subnet-02713ee2c4df40a92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "available_ip_address_count": 4089,
            "cidr_block": "10.0.192.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "cluster-subnet-private3-sa-east-1c"
                ]
              }
            ],
            "id": "subnet-02713ee2c4df40a92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346337500368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "cluster-subnet-private3-sa-east-1c"
            },
            "vpc_id": "vpc-0782d93824dc8c902"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:vpc/vpc-0782d93824dc8c902",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ea2b97ccc35edce4",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-081bf2499d5006735",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "cluster-vpc"
                ]
              }
            ],
            "id": "vpc-0782d93824dc8c902",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-063fbd742d9e9c091",
            "owner_id": "346337500368",
            "tags": {
              "Name": "cluster-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:vpc/vpc-0b4422ba2ad1bd8e3",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-094334f69df56c775",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-081bf2499d5006735",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4422ba2ad1bd8e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a436747a20002357",
            "owner_id": "346337500368"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "fiap_pedidos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:346337500368:loadbalancer/app/lb-fiap-pedidos/a9b411328896c13a",
            "arn_suffix": "app/lb-fiap-pedidos/a9b411328896c13a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-lb-fiap-pedidos-1653236660.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:sa-east-1:346337500368:loadbalancer/app/lb-fiap-pedidos/a9b411328896c13a",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-fiap-pedidos",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01d9ee96ef737bc78"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-077a4b4b6bc7989cc"
              },
              {
                "subnet_id": "subnet-0a83335ba59b9d872"
              }
            ],
            "subnets": [
              "subnet-077a4b4b6bc7989cc",
              "subnet-0a83335ba59b9d872"
            ],
            "tags": {
              "Name": "lb-fiap-pedidos"
            },
            "tags_all": {
              "Name": "lb-fiap-pedidos"
            },
            "vpc_id": "vpc-0782d93824dc8c902",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "dependencies": [
            "aws_security_group.balancer",
            "data.aws_subnet.clustera",
            "data.aws_subnet.clusterb",
            "data.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "fiap_pedidos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:346337500368:listener/app/lb-fiap-pedidos/a9b411328896c13a/2daf01e7e6ccbf3e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:346337500368:targetgroup/tg-fiap-pedidos/69a485a8c8e5e734",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:346337500368:listener/app/lb-fiap-pedidos/a9b411328896c13a/2daf01e7e6ccbf3e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:346337500368:loadbalancer/app/lb-fiap-pedidos/a9b411328896c13a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.fiap_pedidos",
            "aws_lb_target_group.fiap_pedidos",
            "aws_security_group.balancer",
            "data.aws_subnet.clustera",
            "data.aws_subnet.clusterb",
            "data.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fiap_pedidos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:346337500368:targetgroup/tg-fiap-pedidos/69a485a8c8e5e734",
            "arn_suffix": "targetgroup/tg-fiap-pedidos/69a485a8c8e5e734",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/api/v1/health-check",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:346337500368:targetgroup/tg-fiap-pedidos/69a485a8c8e5e734",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-fiap-pedidos",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tg-fiap-pedidos"
            },
            "tags_all": {
              "Name": "tg-fiap-pedidos"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0782d93824dc8c902"
          },
          "dependencies": [
            "data.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:security-group/sg-01d9ee96ef737bc78",
            "description": "Security group for balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d9ee96ef737bc78",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-fiap-pedidos-sg",
            "name_prefix": "",
            "owner_id": "346337500368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-fiap-pedidos-sg"
            },
            "tags_all": {
              "Name": "alb-fiap-pedidos-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0782d93824dc8c902"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:346337500368:security-group/sg-0f24e54621fcb20ef",
            "description": "Security group for cluster ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f24e54621fcb20ef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d9ee96ef737bc78"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cluster-fiap-pedidos-sg",
            "name_prefix": "",
            "owner_id": "346337500368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cluster-fiap-pedidos-sg"
            },
            "tags_all": {
              "Name": "cluster-fiap-pedidos-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0782d93824dc8c902"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.balancer",
            "data.aws_vpc.cluster"
          ]
        }
      ]
    }
  ]
}